styles: add background blobs and fix spacing (#406)
* feat: gas station hero

* feat: Text slider

* feat: Partners section

* fix: separate animation and slider classes

* feat: Network gas pumps

* feat: section Your tank

* feat: section Safe + Pimlico

* apply gradients in refrigerator section

* feat: section Twitter CTA

* styles: fix some spaces

* add meta image

* Update src/components/GasStation/Hero/index.tsx


* Update src/content/gas-station.json


* refactor: extract xSharingUrl to utils and rename twitter -> x

* refactor: useCurrentUrl

* Update sared tweet message and button

* refactor: defined BlockWithVariant type

* refactor: delete unnecessary component TextBlockImageCampaign

* refactor: render Grid item conditionaly

* refactor: custom hook to chose responsive images

* Update src/lib/xSharingUrl.ts


* fix: return `null` instead of `undefined`

* refactor: useResponsiveImages receives an array of `ImageObj`

* style: adjust Hero video top margin

* style: stick slider at the bottom of the video

* style: Partners section background spots

* style: Background spots

* style: adjust section min and max height

* style: add Slider to the last section

* Update src/components/GasStation/Slider/index.tsx


---------

--- a/src/components/GasStation/Hero/styles.module.css
+++ b/src/components/GasStation/Hero/styles.module.css
@@ -1,9 +1,14 @@
 .videoWrapper {
   position: relative;
+  margin-top: calc(-1 * var(--header-height));
 }
 
 .video {
   width: 100%;
+}
+
+.sliderWrapper {
+  margin-top: -6px;
 }
 
 .textContainer {
