--- a/src/components/GasStation/ImageTextTop/styles.module.css
+++ b/src/components/GasStation/ImageTextTop/styles.module.css
@@ -1,13 +1,28 @@
+.container {
+  position: relative;
+}
+
 .bg {
   background-repeat: no-repeat;
   overflow: hidden;
   background-size: contain;
-  height: 90vh;
+  min-height: 650px;
+  max-height: 90vh;
   background-position: center top 150px;
 }
 
 @media (min-width: 900px) {
   .bg {
     background-position: center top;
+  }
+
+  .spot1 {
+    position: absolute;
+    left: -300px;
+    z-index: -1;
+    width: 1000px;
+    height: 1000px;
+    background-image: radial-gradient(at left, rgba(18, 255, 128, 0.4) 0%, rgba(246, 247, 248, 0) 80%);
+    filter: blur(50px);
   }
 }
